; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_standby.c_ResolveRecoveryConflictWithSnapshot.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/ipc/extr_standby.c_ResolveRecoveryConflictWithSnapshot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@PROCSIG_RECOVERY_CONFLICT_SNAPSHOT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ResolveRecoveryConflictWithSnapshot(i32 %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  store i32 %1, i32* %6, align 4
  store i32 %0, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @TransactionIdIsValid(i32 %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %19

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32* @GetConflictingVirtualXIDs(i32 %12, i32 %14)
  store i32* %15, i32** %5, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = load i32, i32* @PROCSIG_RECOVERY_CONFLICT_SNAPSHOT, align 4
  %18 = call i32 @ResolveRecoveryConflictWithVirtualXIDs(i32* %16, i32 %17)
  br label %19

19:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @TransactionIdIsValid(i32) #1

declare dso_local i32* @GetConflictingVirtualXIDs(i32, i32) #1

declare dso_local i32 @ResolveRecoveryConflictWithVirtualXIDs(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
